.k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-openslo-ingress
  namespace: hello-openslo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    - host: "hello-openslo.localhost.com"
      http:
        paths:
          - path: /(api)(\/.*)
            pathType: Prefix
            backend:
              service:
                name: hello-openslo-api
                port:
                  number: 8080
